# Image-Processing

./: .gitignore
Color domain processing/: CMakeLists.txt  main.cpp
Color domain processing/include/: histogram_processing.hpp
Crosswalk Detection/: CMakeLists.txt  README.MD  main.cpp
Image rescalling/: CMakeLists.txt  README.MD  main.cpp
Image thresholding/: CMakeLists.txt  main.cpp
Morphological Operations/: CMakeLists.txt  main.cpp
Various operations/: CMakeLists.txt  main.cpp
Various operations spatial domain/: CMakeLists.txt  main.cpp
